<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photodrop</string>
    <string name="nyi">Not yet implemented.</string>
    <string name="noPicasaSupport">Cannot yet load images from picasa</string>
    <string name="picasaUrl" translatable="false">content://com.google.android.gallery3d.provider/picasa/</string>
    <string name="wrongDevSetup">You have to set up the developmment environment by adding two String resources called appKey and appSecret which contain the app key and the app secret.</string>
    <string name="mailType" translatable="false">plain/text</string>
    <string name="imageType" translatable="false">image/*</string>
    <string name="jpgSuffix" translatable="false">.jpg</string>
    <string name="pngSuffix" translatable="false">.png</string>
    <string name="txtSuffix" translatable="false">.txt</string>
    <string name="photoNameScheme" translatable="false">yyyyMMdd_HHmmss</string>
    <string name="picasaPreHC" translatable="false">content://com.android.gallery3d.provider</string>
    <string name="picasaPostHC" translatable="false">content://com.google.android.gallery3d</string>
    <string name="picturesDir" translatable="false">Pictures/</string>
    <string name="feedback_mail_address" translatable="false">lippertsjan@gmail.com</string>
    <string name="bug_report_mail_address" translatable="false">lippertsjan@gmail.com</string>
    <string name="noPhotoRightNow">There\'s something wrong. Can not take photo right now</string>
    <string name="noCommentGiven">&lt;no comment given></string>
    <!-- Dropbox -->
    <string name="linkDropbox">Link with Dropbox</string>
    <string name="unlinkDropbox">Unlink from Dropbox</string>
    <string name="explanationDropbox">This app uses Dropbox to share your pictures with others. It cannot be used without granting permission to your Dropbox.\n\nUnfrotunatelly there seems to be a bug with google Chrome Beta which prevents authentification; please try another browser or install the official Dropbox App. The official Dropbox app can be removed after authentification was successful.</string>
    <string name="authentificationNoInternet">You have to be connected to the internet to start the authentification.</string>
    <string name="authentificationError">There was an error. Please try again.</string>
    <string name="authentificationSuccessful">Authentification was successful. You are now linked to Dropbox.</string>
    <string name="dropboxUnlinkSucces">You successfully unlinked this app from Dropbox.</string>
    <string name="remoteDbFolder" translatable="false">/ddiTest/</string>
    <string name="unhandledExceptionLog" translatable="false">Something went wrong: </string>
    <string name="dropboxExceptionUnknownCauseLog" translatable="false">Unknown error.  Try again.</string>
    <string name="dropboxParseExceptionLog" translatable="false">Dropbox error.  Try again.</string>
    <string name="dropboxNetworkExceptionLog" translatable="false">Network error.  Try again.</string>
    <string name="dropboxUnlinkedExceptionLog" translatable="false">DropboxUnlinkedException. Need to unlink user.</string>
    <string name="dropboxFileTooBig">This file is too big to upload</string>
    <string name="dropboxPartialFileException">Upload/Download canceled.</string>
    <string name="dropboxParseException">Dropbox error.  Try again.</string>

    <!-- menu items -->
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="takePhoto">Take Photo</string>
    <string name="chooseExisting">Choose existing</string>
    <string name="automatic_synchronisation">Automatic synchronisation</string>
    <string name="sync_interval">Sync interval (minutes)</string>
    <string name="settings">Settings</string>
    <string name="sync_only_on_wifi">Sync only on wifi</string>

</resources>