<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item -->
    <!-- android:id="@+id/mnuRefresh" -->
    <!-- android:icon="@drawable/ic_refresh_dark" -->
    <!-- android:orderInCategory="5" -->
    <!-- android:showAsAction="always" -->
    <!-- android:title="@string/refresh"/> -->

    <item
        android:id="@+id/mnuPhoto"
        android:icon="@drawable/ic_action_photo_dark"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/takePhoto"/>
    <item
        android:id="@+id/mnuChoose"
        android:icon="@drawable/ic_picture_dark"
        android:orderInCategory="11"
        android:showAsAction="always"
        android:title="@string/chooseExisting"/>
    <item
        android:id="@+id/mnuAbout"
        android:icon="@drawable/ic_about_dark"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>